@@ -10,7 +10,7 @@
     <category>Emulation</category>
   </categories>
   <releases>
-          <release version="@PACKAGE_VERSION@" date="2020-9-15"/>
+          <release version="@PACKAGE_VERSION@" date="2020-9-19"/>
   </releases>
   <screenshots>
 	  <screenshot/>
