@@ -814,6 +814,7 @@ vsyncrate = 75
 #                                        Possible values: auto, fixed, max.
 #                             cycleup: Amount of cycles to decrease/increase with keycombos.(CTRL-F11/CTRL-F12)
 #                           cycledown: Setting it lower than 100 will be a percentage.
+#   cycle emulation percentage adjust: The percentage adjustment for use with the "Emulate CPU speed" feature. Default is 0 (no adjustment), but you can adjust it (between -25% and 25%) if necessary.
 #     use dynamic core with paging on: Allow dynamic core with 386 paging enabled. This is generally OK for DOS games and Windows 3.1.
 #                                        If the game becomes unstable, turn off this option.
 #                                        WARNING: Do NOT use this option with preemptive multitasking OSes including Windows 95 and Windows NT.
@@ -853,6 +854,7 @@ cputype                             = auto
 cycles                              = auto
 cycleup                             = 10
 cycledown                           = 20
+cycle emulation percentage adjust   = 0
 use dynamic core with paging on     = true
 ignore opcode 63                    = true
 apmbios                             = true
