@@ -1,4 +1,4 @@
 /*auto-generated*/
-#define UPDATED_STR "Sep 16, 2020 4:45:18pm"
-#define GIT_COMMIT_HASH "668935e"
+#define UPDATED_STR "Sep 19, 2020 6:54:21pm"
+#define GIT_COMMIT_HASH "9ea356c"
 #define COPYRIGHT_END_YEAR "2020"
