@@ -24,7 +24,11 @@
     to emulate the speed of a specific CPU class. The
     cycles to emulate are approximations of the actual
     CPU hardware, and they are available thanks to data
-    provided by the user maximum105. (Wengier)
+    provided by the user maximum105. Also added config
+    option "cycle emulation percentage adjust" in [cpu]
+    section for users who would like to make relative
+    percentage adjustments (between -25% and 25%) in
+    case it is necessary. (Wengier)
   - The command for showing the Configuration Tool has
     been renamed from "SHOWGUI" to "SHOWTOOL". A new
     command-line option -gui is added to CONFIG command
